k8s/server-cluster-ip-external-name.yml
kind: Service
apiVersion: v1
metadata:
 name: server-cluster-ip-external-name
 namespace: ingress-nginx
spec:
 type: ExternalName
 externalName: server-cluster-ip-service.default.svc.cluster.local
