k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  tls:
    - hosts: 
      - intellect-medical.com
      secretName: comodo-tls
  rules:
    - host: intellect-medical.ru
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-external-name
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-external-name
              servicePort: 5000
